# duck-sqllsp

./: .coderabbit.yaml  .gitignore  .typos.toml  CHANGELOG.md  CLAUDE_CONTEXT.md  Cargo.toml  HARDENING_TODO.md  PLAN.md  README.md  ROADMAP_ADVANCED.md  install.sh  rustfmt.toml  socket.yml
.changeset/: README.md  config.json
.github/: labels.sh  protect-branches.sh  sync-rust-scaffolding.sh
.github/workflows/: audit.yml  bench-regress.yml  changesets.yml  ci.yml  codeql.yml  napi-prebuilds.yml  release.yml  scorecard.yml  typos.yml
.husky/: pre-commit
crates/dsl-analysis/src/: diagnostic.rs
crates/dsl-analysis/src/rules/: alter_table_no_owner.rs  alter_type_add_value_in_tx.rs  backslash_in_string.rs  bare_return_typed.rs  bool_compare_equals.rs  boolean_in_text_column.rs  case_single_when.rs  cast_text_to_int_in_where.rs  char_length_vs_length.rs  copy_no_format.rs  deep_case_nesting.rs  distinct_on_no_order.rs  distinct_with_aggregate.rs  empty_comment.rs  exit_outside_loop.rs  grant_to_public.rs  (+35 more)
crates/dsl-analysis/tests/: rules.rs
crates/dsl-catalog/: Cargo.toml
crates/dsl-catalog/src/: lookup.rs  model.rs  persist.rs
crates/dsl-catalog/tests/: store.rs
crates/dsl-cli/: Cargo.toml
crates/dsl-completion/src/: create_table.rs  engine.rs  item.rs  phase.rs  render.rs  source_tables.rs
crates/dsl-completion/tests/: context.rs  engine.rs
crates/dsl-conn/tests/: spec.rs
crates/dsl-format/: Cargo.toml
crates/dsl-format/src/: align.rs  style.rs
crates/dsl-format/tests/: idempotent.rs  stress.rs
crates/dsl-hover/src/: constraint_id.rs  lib.rs  render.rs  resolver.rs
crates/dsl-hover/tests/: fuzz.rs  resolver.rs  token.rs
crates/dsl-knowledge/src/: entry.rs  lib.rs  render.rs
crates/dsl-knowledge/tests/: coverage.rs  lookup.rs  render.rs  tables.rs
crates/dsl-parse/: Cargo.toml
crates/dsl-parse/src/: dialect.rs  error.rs  lib.rs  split.rs
crates/dsl-parse/src/backend/pg_query/: convert.rs
crates/dsl-parse/src/backend/sqlparser/: convert.rs  dialect_pick.rs  mod.rs
crates/dsl-parse/tests/: parse_ddl.rs  parse_dml.rs  split.rs
crates/dsl-resolve/: Cargo.toml
crates/dsl-resolve/src/: binding.rs  lib.rs  resolver.rs  scope.rs
crates/dsl-resolve/tests/: property.rs  resolver.rs
crates/dsl-server/: Cargo.toml
crates/dsl-server/src/: backend.rs  diagnostics.rs  documents.rs  refresh.rs  state.rs
crates/dsl-server/tests/: handlers_unit.rs
dsl-analysis/: Cargo.toml
dsl-analysis/src/: clause_scan.rs  ct_model.rs  diagnostic.rs  lib.rs  textutil.rs  typing.rs
dsl-analysis/src/rules/: acos_asin_domain.rs  acosh_atanh_domain.rs  add_column_notnull_no_default.rs  add_column_volatile_default.rs  add_fk_not_valid.rs  advisory_lock_literal_key.rs  advisory_lock_no_unlock.rs  after_trigger_return_row.rs  agg_distinct_order_mismatch.rs  agg_missing_delimiter.rs  aggregate_distinct_star.rs  aggregate_in_check.rs  aggregate_in_index.rs  aggregate_in_where.rs  aggregate_star_only_count.rs  alter_add_check_no_not_valid.rs  alter_add_key_lock.rs  alter_column_type.rs  alter_drop_just_created.rs  alter_set_not_null_scan.rs  alter_set_tablespace.rs  alter_table_no_owner.rs  alter_trigger_lock.rs  alter_type_add_value_in_tx.rs  alter_type_label_unknown.rs  ambiguous_column.rs  analyze_in_tx.rs  any_all_empty_array.rs  any_all_multicol.rs  any_all_single_element_array.rs  any_array_duplicate.rs  any_array_self_member.rs  array_all_null.rs  array_cat_empty.rs  array_dim_zero.rs  array_elem_vs_col.rs  array_eq_with_null.rs  array_fn_on_scalar.rs  array_func_null_array.rs  array_length_missing_dim.rs  (+615 more)
dsl-analysis/tests/: idioms.rs  perf_bench.rs  rules.rs
dsl-catalog/src/: lib.rs  lookup.rs  model.rs  persist.rs  store.rs
dsl-catalog/tests/: model.rs  store.rs
dsl-cli/: Cargo.toml
dsl-cli/src/: main.rs  server.rs
dsl-completion/: Cargo.toml
dsl-completion/src/: context.rs  contexts.rs  create_index.rs  create_table.rs  engine.rs  fallback.rs  item.rs  lib.rs  phase.rs  plpgsql_locals.rs  render.rs  source_tables.rs  sources.rs
dsl-completion/tests/: context.rs  engine.rs  fuzz.rs  phase.rs
dsl-conn/: Cargo.toml
dsl-conn/src/: driver.rs  lib.rs  spec.rs  util.rs
dsl-conn/src/mysql/: introspect.rs  mod.rs
dsl-conn/src/postgres/: introspect.rs  mod.rs
dsl-conn/src/sqlite/: introspect.rs  mod.rs
dsl-conn/tests/: spec.rs
dsl-format/src/: align.rs  external.rs  lib.rs  style.rs
dsl-format/tests/: idempotent.rs  plpgsql.rs  stress.rs  unicode.rs
dsl-hover/: Cargo.toml
dsl-hover/src/: constraint_id.rs  ddl.rs  implicit.rs  lib.rs  md_table.rs  render.rs  resolver.rs  token.rs
dsl-hover/tests/: dotted.rs  fuzz.rs  resolver.rs  role.rs  token.rs
dsl-knowledge/: Cargo.toml
dsl-knowledge/src/: entry.rs  lib.rs  render.rs
dsl-knowledge/src/tables/: functions.rs  keywords.rs  mod.rs  types.rs
dsl-knowledge/tests/: coverage.rs  lookup.rs  render.rs  tables.rs  wrap.rs
dsl-parse/: Cargo.toml
dsl-parse/src/: ast.rs  backend.rs  dialect.rs  error.rs  lib.rs  parsed_file.rs  plpgsql.rs  split.rs
dsl-parse/tests/: parse_ddl.rs  parse_dml.rs  parse_select.rs  split.rs
dsl-resolve/src/: binding.rs  lib.rs  resolver.rs  scope.rs
dsl-resolve/tests/: fuzz.rs  property.rs  resolver.rs
dsl-server/: Cargo.toml
dsl-server/src/: backend.rs  capabilities.rs  config.rs  diagnostics.rs  documents.rs  lib.rs  refresh.rs  state.rs
dsl-server/src/handlers/: call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  definition.rs  document_highlight.rs  document_symbol.rs  execute_command.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hints.rs  linked_editing.rs  mod.rs  on_type_formatting.rs  perf.rs  position.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  type_definition.rs  workspace_symbol.rs
dsl-server/tests/: handlers_unit.rs
vscode-extension/: CHANGELOG.md  README.md  package.json
vscode-extension/media/: connect.md  format.md  install.md  try.md
vscode-extension/snippets/: sql.json
vscode-extension/src/: connections.ts  extension.ts  schema-tree.ts  tree.ts
(+20 files in other folders)
