[package]
name = "duck-sqllsp"
description = "duck-sqllsp: a modern SQL language server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "duck-sqllsp"
path = "src/main.rs"

[dependencies]
dsl-server         = { workspace = true }
dsl-analysis       = { workspace = true }
dsl-parse          = { workspace = true }
dsl-resolve        = { workspace = true }
dsl-completion     = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
tower-lsp          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
