[package]
name = "dsl-knowledge"
description = "Curated SQL keyword / function / type knowledge base used by completion, hover, and diagnostics in duck-sqllsp."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
once_cell = { workspace = true }
