[package]
name = "dsl-catalog"
description = "Schema cache for duck-sqllsp: tables, columns, functions, constraints. XDG-persisted JSON."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
