[package]
name = "dsl-format"
description = "SQL formatting for duck-sqllsp: DataGrip-style alignment + external sql-formatter shell-out."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
